// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DruxtAuth Nuxt module API Proxy - Array 1`] = `
Object {
  "redirect": Object {
    "callback": "/callback",
    "login": "/user/login",
    "logout": "/",
  },
  "strategies": Object {
    "drupal-authorization_code": Object {
      "clientId": "mock-client-id",
      "codeChallengeMethod": "S256",
      "credentials": true,
      "endpoints": Object {
        "authorization": "https://demo-api.druxtjs.org/oauth/authorize",
        "authorizationBackend": "https://demo-api.druxtjs.org/oauth/authorize",
        "authorizationSameOrigin": "/oauth/authorize",
        "token": "/oauth/token",
        "userInfo": "/oauth/userinfo",
      },
      "grantType": "authorization_code",
      "responseType": "code",
      "scheme": "<druxt-auth>/templates/drupal-scheme.js",
    },
    "drupal-password": Object {
      "endpoints": Object {
        "login": Object {
          "baseURL": "",
          "url": "/_auth/drupal-password/token",
        },
        "logout": false,
        "refresh": Object {
          "baseURL": "",
          "url": "/_auth/drupal-password/token",
        },
        "token": "https://demo-api.druxtjs.org/oauth/token",
        "user": Object {
          "method": "post",
          "url": "/oauth/userinfo",
        },
      },
      "grantType": "password",
      "refreshToken": Object {
        "data": "refresh_token",
        "maxAge": 2592000,
        "property": "refresh_token",
      },
      "scheme": "<druxt-auth>/templates/drupal-password-scheme.js",
      "session": false,
      "token": Object {
        "maxAge": 31536000,
        "name": "Authorization",
        "property": "access_token",
        "type": "Bearer",
      },
      "user": Object {
        "property": false,
      },
    },
  },
}
`;

exports[`DruxtAuth Nuxt module API Proxy - Object 1`] = `
Object {
  "redirect": Object {
    "callback": "/callback",
    "login": "/user/login",
    "logout": "/",
  },
  "strategies": Object {
    "drupal-authorization_code": Object {
      "clientId": "mock-client-id",
      "codeChallengeMethod": "S256",
      "credentials": true,
      "endpoints": Object {
        "authorization": "https://demo-api.druxtjs.org/oauth/authorize",
        "authorizationBackend": "https://demo-api.druxtjs.org/oauth/authorize",
        "authorizationSameOrigin": "/oauth/authorize",
        "token": "/oauth/token",
        "userInfo": "/oauth/userinfo",
      },
      "grantType": "authorization_code",
      "responseType": "code",
      "scheme": "<druxt-auth>/templates/drupal-scheme.js",
    },
    "drupal-password": Object {
      "endpoints": Object {
        "login": Object {
          "baseURL": "",
          "url": "/_auth/drupal-password/token",
        },
        "logout": false,
        "refresh": Object {
          "baseURL": "",
          "url": "/_auth/drupal-password/token",
        },
        "token": "https://demo-api.druxtjs.org/oauth/token",
        "user": Object {
          "method": "post",
          "url": "/oauth/userinfo",
        },
      },
      "grantType": "password",
      "refreshToken": Object {
        "data": "refresh_token",
        "maxAge": 2592000,
        "property": "refresh_token",
      },
      "scheme": "<druxt-auth>/templates/drupal-password-scheme.js",
      "session": false,
      "token": Object {
        "maxAge": 31536000,
        "name": "Authorization",
        "property": "access_token",
        "type": "Bearer",
      },
      "user": Object {
        "property": false,
      },
    },
  },
}
`;

exports[`DruxtAuth Nuxt module API Proxy - default 1`] = `
Object {
  "redirect": Object {
    "callback": "/callback",
    "login": "/user/login",
    "logout": "/",
  },
  "strategies": Object {
    "drupal-authorization_code": Object {
      "clientId": "mock-client-id",
      "codeChallengeMethod": "S256",
      "credentials": true,
      "endpoints": Object {
        "authorization": "https://demo-api.druxtjs.org/oauth/authorize",
        "authorizationBackend": "https://demo-api.druxtjs.org/oauth/authorize",
        "authorizationSameOrigin": "/oauth/authorize",
        "token": "/oauth/token",
        "userInfo": "/oauth/userinfo",
      },
      "grantType": "authorization_code",
      "responseType": "code",
      "scheme": "<druxt-auth>/templates/drupal-scheme.js",
    },
    "drupal-password": Object {
      "endpoints": Object {
        "login": Object {
          "baseURL": "",
          "url": "/_auth/drupal-password/token",
        },
        "logout": false,
        "refresh": Object {
          "baseURL": "",
          "url": "/_auth/drupal-password/token",
        },
        "token": "https://demo-api.druxtjs.org/oauth/token",
        "user": Object {
          "method": "post",
          "url": "/oauth/userinfo",
        },
      },
      "grantType": "password",
      "refreshToken": Object {
        "data": "refresh_token",
        "maxAge": 2592000,
        "property": "refresh_token",
      },
      "scheme": "<druxt-auth>/templates/drupal-password-scheme.js",
      "session": false,
      "token": Object {
        "maxAge": 31536000,
        "name": "Authorization",
        "property": "access_token",
        "type": "Bearer",
      },
      "user": Object {
        "property": false,
      },
    },
  },
}
`;

exports[`DruxtAuth Nuxt module Defaults 1`] = `
Object {
  "redirect": Object {
    "callback": "/callback",
    "login": "/user/login",
    "logout": "/",
  },
  "strategies": Object {
    "drupal-authorization_code": Object {
      "clientId": "mock-client-id",
      "codeChallengeMethod": "S256",
      "credentials": false,
      "endpoints": Object {
        "authorization": "https://demo-api.druxtjs.org/oauth/authorize",
        "authorizationBackend": "https://demo-api.druxtjs.org/oauth/authorize",
        "token": "https://demo-api.druxtjs.org/oauth/token",
        "userInfo": "https://demo-api.druxtjs.org/oauth/userinfo",
      },
      "grantType": "authorization_code",
      "responseType": "code",
      "scheme": "<druxt-auth>/templates/drupal-scheme.js",
    },
    "drupal-password": Object {
      "endpoints": Object {
        "login": Object {
          "baseURL": "",
          "url": "/_auth/drupal-password/token",
        },
        "logout": false,
        "refresh": Object {
          "baseURL": "",
          "url": "/_auth/drupal-password/token",
        },
        "token": "https://demo-api.druxtjs.org/oauth/token",
        "user": Object {
          "method": "post",
          "url": "https://demo-api.druxtjs.org/oauth/userinfo",
        },
      },
      "grantType": "password",
      "refreshToken": Object {
        "data": "refresh_token",
        "maxAge": 2592000,
        "property": "refresh_token",
      },
      "scheme": "<druxt-auth>/templates/drupal-password-scheme.js",
      "session": false,
      "token": Object {
        "maxAge": 31536000,
        "name": "Authorization",
        "property": "access_token",
        "type": "Bearer",
      },
      "user": Object {
        "property": false,
      },
    },
  },
}
`;
